--- a/shop.css
+++ b/shop.css
@@ -20,6 +20,21 @@ header h1 {
     color: black;
 }
 
+header button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 96px;
+    height: 32px;
+    background-color: transparent;
+    border-style: none;
+}
+
+header button:hover {
+    color: #1e90ff;
+}
+
 .title_desc {
     margin-top: 32px;
     margin-left: 350px;
@@ -122,10 +137,97 @@ header h1 {
     margin-top: 8px;
 }
 
-.card div, button {
+.card div, .card button {
     background-color: slategray;
 
     width: 192px;
     height: 256px;
     border-radius: 8px;
+}
+
+.line {
+    border-bottom: solid;
+    border-width: thin;
+}
+
+.cart_container {
+    margin-top: 32px;
+    border-style: solid;
+    border-width: thin;
+    border-radius: 8px;
+    padding: 16px;
+}
+
+.cart_container h4 {
+    margin-top: 0;
+}
+
+#cart {
+    position: fixed;
+    display: none;
+    background-color: rgb(255, 255, 255, 1);
+    width: 350px;
+    height: 100%;
+    z-index: 11;
+    right: 0;
+    top: 0;
+    padding: 16px;
+}
+
+#cart.open {
+    animation-name: translate;
+    animation-duration: 0.3s;
+}
+
+#cart.close {
+    animation-name: translateRev;
+    animation-duration: 0.2s;
+}
+
+@keyframes translate {
+    from { width: 0px; }
+    to { width: 350px; }
+}
+
+@keyframes translateRev {
+    from { width: 350px; }
+    to { width: 0px; }
+}
+
+.close_cart {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    left: -25px;
+}
+
+.open_cart_page {
+    position: relative;
+    top: 10px;
+    width: auto;
+    height: 20px;
+
+    background-color: rgb(225, 225, 225);
+    border-style: solid;
+    border-width: 2px;
+    text-decoration: none;
+    color: inherit;
+    cursor: auto;
+    outline: 0;
+}
+
+.open_cart_page:hover {
+    cursor: pointer;
+    background-color: rgb(210, 210, 210);
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    right: 0;
+    top: 0;
 }
